src/objects/Presales_Resource_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_View_Only__c</fullName>
        <formula>Opportunity_Name__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PSRR</relationshipLabel>
        <relationshipName>Presales_Resource_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Presales Resource Requests</relationshipLabel>
        <relationshipName>Presales_Resource_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Name__c</fullName>
        <description>This field will auto populate the Opportunity Owner Name</description>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Presales_Resource_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Center_Manager__c</fullName>
        <label>Proposal Center Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Marie Iorio</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Status__c</fullName>
        <label>Proposal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Type__c</fullName>
        <label>Proposal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Budgetary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sharepoint_Link__c</fullName>
        <label>Sharepoint Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Presales Resource Requests</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PSRR{000000}</displayFormat>
        <label>PSRR #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presales Resource Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>